# boilerplates-for-rust-application

./: .gitignore  Cargo.toml  README.md
lib_pgsql/: Cargo.toml
lib_pgsql/src/: client.rs  common.rs  dpqueryable.rs  lib.rs  pool.rs  queryable.rs
lib_redis/: Cargo.toml
lib_redis/src/: lib.rs
