[package]
name = "lib_pgsql"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
log = "0.4.20"
env_logger = "0.10.0"
async-trait = "0.1.73"
futures-util = "0.3.28"
tokio-postgres = "0.7.10"
tokio-pg-mapper = "0.2.0"
postgres-from-row = "0.5.2"
tokio-pg-mapper-derive = "0.2.0"
postgres-types = { version = "0.2.6", features = ["derive"] }
serde = {version = "1.0.188", features = ["derive"]}
tokio = {version = "1.32.0", features = ["full"]}
deadpool-postgres = { version = "0.11.0", features = ["serde"] }
